--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.4.0",
-    "@supabase/supabase-js": "^2.45.0",
+    "@supabase/supabase-js": "^2.45.2",
     "autoprefixer": "10.4.17",
     "geist": "^1.2.1",
     "lodash": "^4.17.21",
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-places-autocomplete": "^7.3.0",
+    "supabase": "^1.191.3",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
     "use-places-autocomplete": "^4.0.1"
