--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.45.2",
     "autoprefixer": "10.4.17",
+    "firebase": "^10.13.1",
     "geist": "^1.2.1",
     "lodash": "^4.17.21",
     "next": "latest",
