added email web scraper

--- a/functions/.eslintrc.json
+++ b/functions/.eslintrc.json
@@ -30,6 +30,7 @@
     "import/no-unresolved": 0,
     "indent": ["error", 4],
     "@typescript-eslint/no-explicit-any": "off",
-    "max-len": ["error", {"code": 120}]
+    "max-len": ["error", {"code": 120}],
+    "require-jsdoc": 0
   }
 }
