--- a/functions/package.json
+++ b/functions/package.json
@@ -18,10 +18,14 @@
   "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.45.3",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
+    "express": "^4.21.0",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
