--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -8,7 +8,8 @@
     "sourceMap": true,
     "strict": true,
     "target": "es2017",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true
   },
   "compileOnSave": true,
   "include": [
