--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-places-autocomplete": "^7.3.0",
+    "react-responsive": "^10.0.0",
     "supabase": "^1.191.3",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
