--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@react-google-maps/api": "^2.19.3",
+    "@stripe/stripe-js": "^4.10.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.45.2",
@@ -18,12 +19,14 @@
     "firebase": "^10.13.1",
     "geist": "^1.2.1",
     "lodash": "^4.17.21",
+    "micro": "^10.0.1",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-places-autocomplete": "^7.3.0",
     "react-responsive": "^10.0.0",
+    "stripe": "^17.3.1",
     "supabase": "^1.191.3",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
