--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^4.10.0",
     "@supabase/ssr": "^0.4.1",
     "@supabase/supabase-js": "^2.45.3",
+    "@vercel/blob": "^0.27.1",
     "autoprefixer": "10.4.17",
     "firebase": "^10.13.1",
     "geist": "^1.2.1",
